<resources>
    <string name="app_name" translatable="false">Mercury Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_feed">FeedActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string-array name="pref_offline_storage_titles">
        <item>Internal</item>
        <item>External</item>
    </string-array>

    <string-array name="pref_offline_time_title">
        <item>Never</item>
        <item>15 days</item>
        <item>30 days</item>
        <item>90 days</item>
        <item>180 days</item>
        <item>360 days</item>
    </string-array>
    <string-array name="pref_offline_time_values">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>90</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string name="pref_header_colors_set">Customize Look</string>
    <string name="pref_title_colors_set_screen_color">Theme</string>
    <string-array name="pref_set_colors_screen_color">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
        <item>White</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tag">Tags</string>
    <string name="title_activity_article_item">ArticleItemActivity</string>
    <string name="title_activity_article">Articles</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_share">Share</string>

    <string name="download_article_notification_title_template">Downloading %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="download_article_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="facebook_app_id">1697719627160299</string>
    <string name="title_activity_base_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="app_screen_default">Light</string>
    <string-array name="app_screen">
        <item>Light</item>
        <item>Dark</item>
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="article_themes_default">Light</string>
    <string-array name="article_themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Sepia</item>
        <item>Green</item>
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="article_just_default">Left</string>
    <string-array name="article_just">
        <item>Left</item>
        <item>Right</item>
    </string-array>

    <string name="article_size_default">12</string>
    <string-array name="article_size">
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
    </string-array>

    <string name="article_family_default">Sans Serif</string>
    <string-array name="article_family">
        <item>Condensed</item>
        <item>Monospace</item>
        <item>Serif</item>
        <item>Sans Serif</item>
        <item>Lobster Two</item>
        <item>Paprika</item>
    </string-array>


    <string name="app_primary_default">Blue</string>
    <string-array name="app_primary">
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string name="app_accent_default">Blue</string>
    <string-array name="app_accent">
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string name="app_navigation_default">Black</string>
    <string-array name="app_navigation">
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string name="app_status_default">Blue</string>
    <string-array name="app_status">
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="title_activity_user">User Settings</string>

    <string name="download_notification_title_template">Download: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="download_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="user_s_image">User\'s Image</string>
    <string name="sample_name">Brian Roadifer</string>
    <string name="sample_email">brnrdfr@gmail.com</string>
    <string name="start_settings">startSettings()</string>
    <string name="all">All</string>
    <string name="offline_limit_default_value">0</string>
</resources>
