<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Mercury Feed Style">
        <ListPreference
            android:title="Screen Color"
            android:dialogTitle="Screen Color"
            android:entries="@array/app_screen"
            android:entryValues="@array/app_screen"
            android:key="app_screen"
            android:defaultValue="@string/app_screen_default"/>
        <ListPreference
            android:title="Primary Color"
            android:dialogTitle="Primary Color"
            android:entries="@array/app_primary"
            android:entryValues="@array/app_primary"
            android:key="app_primary"
            android:defaultValue="@string/app_primary_default"/>
        <ListPreference
            android:title="Accent Color"
            android:dialogTitle="Accent Color"
            android:entries="@array/app_primary"
            android:entryValues="@array/app_primary"
            android:key="app_accent"
            android:defaultValue="@string/app_primary_default" />
        <ListPreference
            android:title="Status Bar Color"
            android:dialogTitle="Status Bar Color"
            android:entries="@array/app_status"
            android:entryValues="@array/app_status"
            android:key="app_status"
            android:defaultValue="@string/app_status_default" />
        <ListPreference
            android:title="Navigation Bar Color"
            android:dialogTitle="Navigation Bar Color"
            android:entries="@array/app_navigation"
            android:entryValues="@array/app_navigation"
            android:key="app_navigation"
            android:defaultValue="@string/app_navigation_default" />


    </PreferenceCategory>
    <PreferenceCategory
        android:title="Article Style">
        <ListPreference
            android:defaultValue="@string/article_themes_default"
            android:entries="@array/article_themes"
            android:entryValues="@array/article_themes"
            android:key="article_theme"
            android:title="Theme"
            android:dialogTitle="Theme" />
        <ListPreference
            android:defaultValue="@string/article_just_default"
            android:entries="@array/article_just"
            android:entryValues="@array/article_just"
            android:key="article_just"
            android:title="Justification"
            android:dialogTitle="Justification" />
        <ListPreference
            android:defaultValue="@string/article_family_default"
            android:entries="@array/article_family"
            android:entryValues="@array/article_family"
            android:key="article_family"
            android:title="Font Family"
            android:dialogTitle="Font Family" />
        <ListPreference
            android:defaultValue="@string/article_size_default"
            android:entries="@array/article_size"
            android:entryValues="@array/article_size"
            android:key="article_size"
            android:title="Text Size"
            android:dialogTitle="Text Size" />
        <SwitchPreference
            android:key="article_full"
            android:title="Full Screen" />
    </PreferenceCategory>
    <Preference
        android:title="Reset Theme"
        android:summary="Reset theme to defaults"
        android:key="reset_default"/>

</PreferenceScreen>