<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_holder"
        android:nestedScrollingEnabled="true"
        android:longClickable="true"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/user_s_image"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="48dp"
            android:id="@+id/button"
            android:contentDescription="@string/title_activity_settings"
            android:src="@drawable/ic_settings"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:paddingTop="24dp"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/image_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:id="@+id/user_name"
            android:textStyle="bold"
            android:text="@string/sample_name"
            android:layout_alignParentTop="true"
            android:textColor="?android:textColorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="?android:textColorPrimary"
            android:id="@+id/user_email"
            android:text="@string/sample_email"
            android:layout_below="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
